<resources>
    <string name="app_name">Domicilios Mil Carnes</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="nickname">Nickname</string>
    <string name="pass">Password</string>
    <string name="identification">Identification</string>
    <string name="id">Identification</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="request_identification">Enter your identification</string>
    <string name="request_name">Enter your name</string>
    <string name="request_last_name">Enter your last name</string>
    <string name="request_nickname">Enter a nickname</string>
    <string name="request_password">Enter a pass</string>
    <string name="request_repeat_password">Enter the pass again</string>
    <string name="request_phone_number">Enter a valid phone number</string>
    <string name="request_address">Enter your address</string>
    <string name="user_does_not_exist_message">User does not exist</string>
    <string name="field_empty_message">This field is empty</string>
    <string name="passwords_do_not_match_message">The passwords do not match</string>
    <string name="id_already_in_use_message">This id is already in use</string>
    <string name="email_already_in_use_message">This email is already in use</string>
    <string name="successful_registration_message">Successful registration</string>
    <string name="welcome_message">Welcome %s</string>
    <string name="app_bar_edit">Edit</string>
    <string name="email">Email</string>
    <string name="request_email">Enter your email</string>
    <string name="app_bar_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping">Carrito de compras</string>
    <string name="app_bar_order">Ver Orden</string>
</resources>
