<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/app_bar_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_order"
        android:title="@string/app_bar_order"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/app_bar_log_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/sign_out"
        app:showAsAction="collapseActionView" />
</menu>